--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Main#index</h1>
-<p>Find me in app/views/main/index.html.erb</p>
+<h1>Where Did My Money Go</h1>
+
+<%= link_to 'My Expenses', controller: 'expenses' %>
