--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,8 +1,8 @@
 <h1>All Expenses</h1>
 
 <%= link_to 'New expense', new_expense_path %>
-
-<table>
+<div class="table-responsive">
+<table class="table table-striped">
   <tr>
     <th>Amount</th>
     <th>Date</th>
@@ -19,3 +19,5 @@
     </tr>
   <% end %>
 </table>
+</table>
+
