Finish basic 'Getting Started' functionality
This commit implements nearly everything from the Rails 'Getting
Started' guide (Just substitute 'expense' for 'article'). This commit
does not implement comments (I don't see a need for that right now) or
basic authentication (The Rails tutorial's basic authentication is too
basic for me).

--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -1,3 +1,7 @@
+<%= link_to 'All', expenses_path %>
+| <%= link_to 'Edit', edit_expense_path(@expense) %>
+| <%= link_to 'Delete', expense_path(@expense), 
+  method: :delete, data: { confirm: 'Are you sure?' } %>
 <p>
   <strong>Amount</strong>
   <%= "$#{@expense.amount}" %>
@@ -7,12 +11,12 @@
   <strong>Date</strong>
   <%= @expense.date.to_date %>
 </p>
- 
+
 <p>
   <strong>Category</strong>
   <%= @expense.category %>
 </p>
- 
+
 <p>
   <strong>Description</strong>
   <%= @expense.description %>
