Use existing date when editing an expense
Also, use to_s(:db). Hopefully, this will result in the correct user
date and not the date from the server.

--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -34,8 +34,9 @@
   </p>
 
   <p>
+    <% @expense.date ||= Time.now.to_s(:db) %>
     <%= f.label :date %><br>
-    <%= f.date_field :date, value: Date.today %>
+    <%= f.date_field :date  %>
   </p>
 
   <p>
