--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,3 +1,6 @@
+<h1>Dashboard</h1>
+<%= render :partial => 'graphs/pie_chart' %>
+
 <h1>All Expenses</h1>
 
 <%= link_to 'New Expense', new_expense_path %>
