--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -10,7 +10,7 @@
   </tr>
   <tr>
     <th>Date</th>
-    <td> <%= @expense.date %>
+    <td> <%= @expense.date.strftime("%A, %B %d, %Y") %>
   </tr>
   <tr>
     <th>Category</th>
