--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,30 +1,2 @@
-<h1>Dashboard</h1>
-<%= render :partial => 'graphs/pie_chart' %>
+<%= render :partial => 'expenses_table' %>
 
-<h1>All Expenses</h1>
-
-<%= link_to 'New Expense', new_expense_path %>
-<div class="table-responsive">
-<table class="table table-striped">
-  <tr>
-    <th>Amount</th>
-    <th>Date</th>
-    <th>Category</th>
-    <th class="hidden-xs">Description</th>
-    <th colspan="3"></th>
-  </tr>
-
-<% @expenses.each do |expense| %>
-  <tr>
-    <td><%= number_to_currency(expense.amount) %></td>
-    <td><%= expense.date.to_date %></td>
-    <td><%= expense.category %></td>
-    <td class="hidden-xs"><%= expense.description %></td>
-    <td><%= link_to 'View', expense_path(expense) %></td>
-    <td><%= link_to 'Edit', edit_expense_path(expense) %></td>
-    <td><%= link_to 'Delete', expense_path(expense),
-      method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-</div>
