--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag    'navbar', media: 'all', 'data-turbolinks-track' => true %>
+<%= stylesheet_link_tag 'navbar', media: 'all', 'data-turbolinks-track' => true %>
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -12,10 +12,8 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <%= link_to "Dashboard", expenses_path %>
-        </li>
-        <li><a href="#">Account</a></li>
+        <li><a href="#">Logout</a></li>
+        <li><a href="#">Settings</a></li>
         <li><a href="#">Help</a></li>
       </ul>
     </div>
