--- a/app/views/expenses/_expenses_table.html.erb
+++ b/app/views/expenses/_expenses_table.html.erb
@@ -1,8 +1,14 @@
-<table>
+<style>
+  .nowrap {
+    white-space: nowrap;
+  }
+</style>
+
+<table width="100%">
   <tr>
     <td><h2 class="sub-header"><%= heading ||= "Expenses"%></h2></td>
-    <td style="padding-left: 25px">
-      <h3><%= link_to "Add new expense", new_expense_path, class: "btn btn-default"%></h3>
+    <td align="right" valign="bottom" style="padding-bottom:15px">
+      <%= link_to "Add new expense", new_expense_path, class: "btn btn-default"%>
     </td>
   </tr>
 </table>
@@ -13,23 +19,24 @@
     <th>Amount</th>
     <th>Date</th>
     <th>Category</th>
-    <th class="hidden-xs">Description</th>
-    <th>Action</th>
+    <th class="hidden-xs hidden-sm">Description</th>
+    <th></th>
   </tr>
 
 <% @expenses.each do |expense| %>
   <tr>
-    <td><%= number_to_currency(expense.amount) %></td>
-    <td><%= expense.date.to_date %></td>
-    <td><%= expense.category %></td>
-    <td class="hidden-xs"><%= expense.description %></td>
-    <td><div class="btn-group">
-      <%= link_to 'View', expense_path(expense), class: "btn btn-default" %>
+    <td class="nowrap"><%= number_to_currency(expense.amount) %></td>
+    <td class="nowrap"><%= expense.date.to_date %></td>
+    <td class="visible-xs" title="<%= expense.category %>">
+      <%= expense.category.truncate(13) %></td>
+    <td class="hidden-xs"><%= expense.category %></td>
+    <td class="hidden-xs hidden-sm"><%= expense.description %></td>
+    <td class="nowrap"><div class="btn-group">
       <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-        <span class="caret"></span>
-        <span class="sr-only">Toggle Dropdown</span>
+        Actions<span class="caret"></span>
       </button>
       <ul class="dropdown-menu" role="menu">
+        <li><%= link_to 'View', expense_path(expense)%></li>
         <li><%= link_to 'Edit', edit_expense_path(expense) %></li>
         <li><%= link_to 'Delete', expense_path(expense),
            method: :delete, data: { confirm: 'Are you sure?' } %></li>
