--- a/app/views/expenses/_expenses_table.html.erb
+++ b/app/views/expenses/_expenses_table.html.erb
@@ -31,9 +31,9 @@
       <%= expense.category.truncate(13) %></td>
     <td class="hidden-xs"><%= expense.category %></td>
     <td class="hidden-xs hidden-sm"><%= expense.description %></td>
-    <td class="nowrap"><div class="btn-group">
+    <td class="nowrap" align="right"><div class="btn-group">
       <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-        Actions<span class="caret"></span>
+        Action<span class="caret"></span>
       </button>
       <ul class="dropdown-menu" role="menu">
         <li><%= link_to 'View', expense_path(expense)%></li>
