Redirect to the expense overview page by default
Rather than the expense page.

--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing expense</h1>
 
-<%= link_to 'All Expenses', expenses_path %>
+<%= link_to 'All Expenses', overview_expenses_path %>
 
 <%= render 'form' %>
 
