--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'View All', expenses_path %>
+<%= link_to 'View All', overview_expenses_path %>
 | <%= link_to 'Edit', edit_expense_path(@expense) %>
 | <%= link_to 'Delete', expense_path(@expense), 
   method: :delete, data: { confirm: 'Are you sure?' } %>
