--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Expense</h1>
 
-<%= link_to 'All Expenses', expenses_path %>
+<%= link_to 'All Expenses', overview_expenses_path %>
 
 <%= render 'form' %>
 
