--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,16 @@
   <div class="row">
     <%= render :partial => 'layouts/sidebar' %>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      <% flash.each do |type, message| %>
+        <br>
+        <div class="alert <%= bootstrap_flash(type) %> alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert">
+            <span aria-hidden="true">&times;</span>
+            <span class="sr-only">Close</span>
+          </button>
+          <%= message %>
+        </div>
+      <% end %>
       <%= yield %>
     </div>
   </div>
