Restrict access based on login status
Create require_session method: redirects to login page if user is not
logged in, then redirects back after the user logs in.

Create forbid_session method: redirects to overview page if user is
already logged in.

Create methods to remember current location or referer. Also create
method to redirect back to the remembered location or a default
location.

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Logout</a></li>
+        <% #link_to("Logout", logout_path) if logged_in? %>
         <li><a href="#">Settings</a></li>
         <li><a href="#">Help</a></li>
       </ul>
