--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -17,12 +17,9 @@
 <%= form_for @expense do |f| %>
   <% if @expense.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@expense.errors.count, "error") %>
-        prohibited this expense from being saved:
-      </h2>
-      <ul>
+      <ul class="list-group">
       <% @expense.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+        <li class="list-group-item list-group-item-danger"><%= msg %></li>
       <% end %>
       </ul>
     </div>
