--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,8 +12,19 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <% #link_to("Logout", logout_path) if logged_in? %>
-        <li><a href="#">Settings</a></li>
+        <!-- TODO: Change session[:user_id] to logged_in? -->
+        <li><%= link_to("Log In", login_path) unless session[:user_id] %></li>
+        <li><%- if session[:user_id] %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li class="divider"></li>
+            <li><%= link_to("Log Out", logout_path) %></li>
+          </ul>
+        </li>
+        <% end %>
         <li><a href="#">Help</a></li>
       </ul>
     </div>
