--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,9 +12,8 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <!-- TODO: Change session[:user_id] to logged_in? -->
-        <li><%= link_to("Log In", login_path) unless session[:user_id] %></li>
-        <li><%- if session[:user_id] %></li>
+        <li><%= link_to("Log In", login_path) unless logged_in? %></li>
+        <li><% if logged_in? %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
