--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(:user, :url => {:controller => :users, :action => :create}) do |f| %>
+<%= form_for @user, :url => {:controller => :users, :action => :create}, 
+  :html => {:class => "form-horizontal", :role => "form"} do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <ul class="list-group">
@@ -8,23 +9,40 @@
       </ul>
     </div>
   <% end %>
-  <p>
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </p>
+  <div class="form-group">
+    <div class="col-sm-8 col-md-5 col-lg-4">
+      <div class="input-group">
+        <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+        <%= f.text_field :email, class: "form-control", placeholder: "Email" %>
+      </div>
+    </div>
+  </div>
 
-  <p>
-    <%= f.label :password %><br>
-    <%= f.password_field :password  %>
-  </p>
+  <div class="form-group">
+    <div class="col-sm-8 col-md-5 col-lg-4">
+      <div class="input-group">
+        <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+        <%= f.password_field :password, class: "form-control", placeholder: "Password"  %>
+      </div>
+    </div>
+  </div>
 
-  <p>
-    <%= f.label :confirm_password %><br>
-    <%= f.password_field :password_confirmation  %>
-  </p>
+  <div class="form-group">
+    <div class="col-sm-8 col-md-5 col-lg-4">
+      <div class="input-group">
+        <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+        <%= f.password_field :password_confirmation, class: "form-control", 
+          placeholder: "Confirm Password"  %>
+      </div>
+    </div>
+  </div>
 
-  <p>
-    <%= f.submit :class => "btn btn-default" %>
-  </p>
+  <div class="form-group">
+    <div class="col-sm-8 col-md-5 col-lg-4">
+      <%= f.submit :class => "btn btn-primary" %>
+      <%= link_to "Cancel", remembered_path_or_default(login_path), 
+        class: "btn btn-default pull-right" %>
+    </div>
+  </div>
 <% end %>
 
