--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -47,8 +47,7 @@
 
   <div class="form-group">
     <div class="col-sm-8 col-md-5 col-lg-4">
-      <% options = ([["Create new category", "New"]] + 
-        Expense.select(:category).map(&:category)).uniq %>
+      <% options = ([["Create new category", "New"]] + user_categories) %>
       <%= f.select :category, options, {:prompt => "Select Category"}, 
         :onchange => "display_new_category();", :class => "form-control"%>
     </div>
