--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -77,7 +77,7 @@
   <div class="form-group">
     <div class="col-sm-8 col-md-5 col-lg-4">
       <%= f.submit :class => "btn btn-primary" %>
-      <%= link_to "Cancel", remembered_path_or_default(overview_expenses_path), 
+      <%= link_to "Cancel", remembered_page || overview_expenses_path, 
         class: "btn btn-default pull-right" %>
     </div>
   </div>
