--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -40,7 +40,7 @@
   <div class="form-group">
     <div class="col-sm-8 col-md-5 col-lg-4">
       <%= f.submit :class => "btn btn-primary" %>
-      <%= link_to "Cancel", remembered_path_or_default(login_path), 
+      <%= link_to "Cancel", remembered_page || login_path, 
         class: "btn btn-default pull-right" %>
     </div>
   </div>
