Various UI improvements
Put the expenses table inside a panel. Make forms consistent.

--- a/app/views/expenses/overview.html.erb
+++ b/app/views/expenses/overview.html.erb
@@ -1,4 +1,3 @@
-<h1 class="page-header">Overview</h1>
 <%= render :partial => 'graphs/pie_chart' %>
-<%= render :partial => 'expenses_table', :locals => {:heading => "Recent Expenses"}%>
+<%= render :partial => 'expenses_table'%>
 
