--- a/app/views/expenses/_expenses_table.html.erb
+++ b/app/views/expenses/_expenses_table.html.erb
@@ -4,47 +4,50 @@
   }
 </style>
 
-<table width="100%">
-  <tr>
-    <td><h2 class="sub-header"><%= heading ||= "Expenses"%></h2></td>
-    <td align="right" valign="bottom" style="padding-bottom:15px">
-      <%= link_to "Add new expense", new_expense_path,
-        class: "btn btn-default" %>
-    </td>
-  </tr>
-</table>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <div class="row">
+      <div class="col-xs-6">
+      </div>
+      <div class="col-xs-6">
+        <%= link_to "Add new expense", new_expense_path,
+          class: "btn btn-primary pull-right" %>
+      </div>
+    </div>
+  </div>
 
-<div class="table-responsive">
-<table class="table table-striped">
-  <tr>
-    <th>Amount</th>
-    <th>Date</th>
-    <th>Category</th>
-    <th class="hidden-xs hidden-sm">Description</th>
-    <th></th>
-  </tr>
+  <div class="table-responsive">
+    <table class="table table-striped">
+      <tr>
+        <th>Amount</th>
+        <th>Date</th>
+        <th>Category</th>
+        <th class="hidden-xs hidden-sm">Description</th>
+        <th></th>
+      </tr>
 
-<% @expenses.each do |expense| %>
-  <tr>
-    <td class="nowrap"><%= number_to_currency(expense.amount) %></td>
-    <td class="nowrap"><%= expense.date.to_date %></td>
-    <td class="visible-xs" title="<%= expense.category %>">
-      <%= expense.category.truncate(13) %></td>
-    <td class="hidden-xs"><%= expense.category %></td>
-    <td class="hidden-xs hidden-sm"><%= expense.description %></td>
-    <td class="nowrap" align="right"><div class="btn-group">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-        Action<span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu" role="menu">
-        <li><%= link_to 'View', expense_path(expense)%></li>
-        <li><%= link_to 'Edit', edit_expense_path(expense) %></li>
-        <li><%= link_to 'Delete', expense_path(expense),
-           method: :delete, data: { confirm: 'Are you sure?' } %></li>
-      </ul>
-    </div></td>
-  </tr>
-<% end %>
-</table>
+    <% @expenses.each do |expense| %>
+      <tr>
+        <td class="nowrap"><%= number_to_currency(expense.amount) %></td>
+        <td class="nowrap"><%= expense.date.to_date %></td>
+        <td class="visible-xs" title="<%= expense.category %>">
+          <%= expense.category.truncate(13) %></td>
+        <td class="hidden-xs"><%= expense.category %></td>
+        <td class="hidden-xs hidden-sm"><%= expense.description %></td>
+        <td class="nowrap" align="right"><div class="btn-group">
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+            Action<span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to 'View', expense_path(expense)%></li>
+            <li><%= link_to 'Edit', edit_expense_path(expense) %></li>
+            <li><%= link_to 'Delete', expense_path(expense),
+               method: :delete, data: { confirm: 'Are you sure?' } %></li>
+          </ul>
+        </div></td>
+      </tr>
+    <% end %>
+    </table>
+  </div>
 </div>
 
