--- a/app/views/expenses/charts.html.erb
+++ b/app/views/expenses/charts.html.erb
@@ -1,10 +1,25 @@
-<h1 class="page-header">Charts</h1>
-
-<%= label_tag :from %>
-<%= date_field_tag :from_date, {}, 
-      :onchange => "update_data();" %>
-<%= label_tag :to %>
-<%= date_field_tag :to_date, {}, 
-      :onchange => "update_data();" %>
-
+<div class="form-inline" role="form">
+  <div class="form-group">
+    <div class="col-sm-8 col-md-5 col-lg-4">
+      <div class="input-group">
+        <span class="input-group-addon">
+          <span class="glyphicon glyphicon-calendar"></span> From
+        </span>
+        <%= date_field_tag :from_date, {}, :onchange => "update_data();",
+          :class => "form-control" %>
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-8 col-md-5 col-lg-4">
+      <div class="input-group">
+        <span class="input-group-addon">
+          <span class="glyphicon glyphicon-calendar"></span> To
+        </span>
+        <%= date_field_tag :to_date, {}, :onchange => "update_data();",
+          :class => "form-control" %>
+      </div>
+    </div>
+  </div>
+</div>
 <%= render :partial => 'graphs/pie_chart' %>
